--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8adf55</color>
+    <color name="colorPrimary">#8ac149</color>
     <color name="colorPrimaryDark">#4493f2</color>
     <color name="colorAccent">#e3fbfc</color>
 
