--- a/app/src/main/res/layout/subscribe_layout.xml
+++ b/app/src/main/res/layout/subscribe_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:layout_width="match_parent"
@@ -12,29 +13,7 @@
         android:src="@drawable/ic_speech_bubble"
         android:contentDescription="@string/chat_icon_desc"/>
 
-    <!--<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:paddingRight="20dp">
 
-        <EditText
-            android:id="@+id/topic"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:hint="Enter a topic" />
-
-        <Button
-            android:id="@+id/btn_subscribe"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Subscribe" />
-
-    </LinearLayout>-->
 
     <!--not subscribed layout-->
     <LinearLayout
@@ -96,6 +75,9 @@
             android:gravity="center"
             android:text="@string/subs_change"/>
 
+
     </LinearLayout>
+
+
 
 </RelativeLayout>
