--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,9 +46,9 @@
                 <de.hdodenhof.circleimageview.CircleImageView
                     xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/profile_img"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/firm_logo1"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:src="@drawable/logo"
                     app:civ_border_color="@color/colorPrimaryDark"
                     app:civ_border_width="3dp"/>
 
