--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFF"
-    tools:context="com.technorio.master.techoriosmsgateway.SplashScreenActivity">
+    tools:context="com.technorio.master.techoriosmsgateway3.SplashScreenActivity">
 
     <ImageView
         android:id="@+id/companyLogo"
