--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.technorio.master.techoriosmsgateway.Main.MainActivity"
+    tools:context="com.technorio.master.techoriosmsgateway3.Main.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
    <LinearLayout
