--- a/app/src/main/res/layout/activity_message_detail.xml
+++ b/app/src/main/res/layout/activity_message_detail.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.technorio.master.techoriosmsgateway3.Main.MessageDetailActivity">
 
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:src="@drawable/ic_speech_bubble"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="10dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Message"
             android:textSize="16sp"
+            android:layout_marginBottom="5dp"
             android:textStyle="bold"/>
 
         <TextView
@@ -25,6 +36,8 @@
             android:layout_width="match_parent"
             android:textSize="16sp"
             android:textIsSelectable="true"
+            android:background="@drawable/field_bg"
+            android:padding="5dp"
             android:text="This is a sample message. A quick brown fox jumps over the lazy dog"
             android:layout_height="wrap_content" />
 
@@ -38,10 +51,12 @@
             android:textStyle="bold"/>
 
         <ListView
+            android:layout_marginTop="5dp"
             android:id="@+id/number_list"
             android:layout_width="match_parent"
+            android:layout_marginLeft="5dp"
             android:layout_height="wrap_content"></ListView>
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
