--- a/app/src/main/res/layout/activity_message_detail.xml
+++ b/app/src/main/res/layout/activity_message_detail.xml
@@ -22,6 +22,10 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,6 +33,21 @@
             android:textSize="16sp"
             android:layout_marginBottom="5dp"
             android:textStyle="bold"/>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+
+         <TextView
+             android:id="@+id/message_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2018-Nov-12"
+            android:layout_marginBottom="5dp"
+            />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/message"
