--- a/app/src/main/res/layout/number_list_item.xml
+++ b/app/src/main/res/layout/number_list_item.xml
@@ -4,5 +4,6 @@
     android:id="@+id/text1"
     android:layout_width="match_parent"
     android:paddingBottom="5dp"
+    android:textSize="16sp"
     android:layout_height="wrap_content"></TextView>
 
