--- a/app/src/main/res/layout/sms_item_layout.xml
+++ b/app/src/main/res/layout/sms_item_layout.xml
@@ -16,7 +16,7 @@
             android:layout_height="54dp"
             android:paddingRight="8dp"
             android:paddingTop="5dp"
-            android:src="@drawable/paper_plane" />
+            android:src="@drawable/ic_outgoing_sms" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,13 +40,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/message_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
                     android:text="15 messages sent"
                     android:textSize="12sp" />
 
@@ -60,6 +61,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
+                    android:text="Nov-12"
                     android:textSize="12sp" />
 
             </LinearLayout>
